<resources>
    <string name="app_name">Nutrif</string>
    <string name="nodays">Você ainda não possui refeições</string>
    <string name="description">Através de um sistema de código gerado pela aplicação android, o aluno do Instituto Federal da Paraíba Campus Campina Grande poderá gerar o código QRCode em seu smartphone ou tablet e entrar no restaurante do instituto. O aplicativo é destina àqueles que possuem estão cadastrados como alunos bolsistas do auxílio alimentação e tem o objetivo de facilitar a entrada ao refeitório da escola.</string>

    <!-- Strings related to login -->
    <string name="matricula">Matrícula</string>
    <string name="password">Senha</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="title_activity_cadastro">Cadastro</string>
    <string name="invalido">Campo Inválido</string>
    <string name="erroconexao">Erro na conexão</string>
    <string name="mensagemdeconfirmacao">Verifique seu email e entre com o código que foi enviado.</string>
    <string name="confirmacao">Confirmação</string>
    <string name="logindone">Login Efetuado com Sucesso! Atualizando dados…</string>
    <string name="photo">Foto</string>

    <string name="funnylogin1">Colocando o arroz no fogo...</string>
    <string name="funnylogin2">Verificando estoque de alimentos...</string>
    <string name="funnylogin3">Lavando as mãos...</string>
    <string name="funnylogin4">Procurando receita de macarrão instantâneo...</string>
    <string name="funnylogin5">Quebrando alguns ovos...</string>

    <string name="cut">Recorte a foto</string>
    <string name="atencao">Atenção!</string>
    <string name="aviso">Certifique-se de tirar uma foto adequada do seu rosto pois ela será utilizada ao entrar no refeitório e só poderá ser tirada uma vez. Qualquer foto julgada inadequada poderá acarretar em punição ao aluno.</string>
    <string name="entendido">Eu compreendi</string>
    <string name="cancelar">Cancelar</string>

    <string name="nao">Não</string>
    <string name="sair">Sair</string>
    <string name="sairconfirmation">Você deseja realmente sair?</string>

    <!-- Strings related to login -->
    <string name="registrar">Registrar</string>
    <string name="undefinedError">Não foi possível identificar o erro</string>
    <string name="codigo">Código</string>
    <string name="naoemembro">Cadastrar</string>
    <string name="confirmar">Confirmar</string>
    <string name="validarcodigo">Validar Código</string>
    <string name="campoerrado">Senha ou Email Inválido</string>
    <string name="recuperaqrcode">Recuperando dados no celular</string>
    <string name="logadooff">Não foi possível realizar o login com o servidor. Contudo, você tem dados salvos localmente</string>
    <string name="dia">Dia:</string>
    <string name="tipo">Tipo:</string>
    <string name="disponivel">Disponível entre:</string>
    <string name="e">e</string>
    <!-- Strings relacionadas à tabela -->
    <string name="horario">Horário:</string>
    <string name="segunda">Segunda-Feira</string>
    <string name="terca">Terça-Feira</string>
    <string name="quarta">Quarta-Feira</string>
    <string name="quinta">Quinta-Feira</string>
    <string name="sexta">Sexta-Feira</string>
    <string name="almoco">Almoço</string>
    <string name="janta">Janta</string>
    <string name="registrarPedido">Registrar Pedido</string>
    <string name="gerarcode">Gerar QR-Code</string>
    <string name="impossivelcarregar">Não foi possível carregar</string>

    <string name="voltar">Voltar</string>
    <string name="errocode">Não foi possível gerar o código</string>
    <string name="identificador">Email ou Matrícula</string>
    <string name="title_activity_refeicao">Refeição</string>
    <string name="instrucaocadastro">Por favor, preencha os campos para realizar o cadastro:</string>
    <string name="refeicoesdireito">Refeições que tenho direito:</string>
    <string name="or">OU</string>
    <string name="refeicao">Refeição</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>

</resources>
