<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:theme="@style/AppTheme"
    tools:context="br.edu.ladoss.nutrif.view.activitys.EnterActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/content">

        <LinearLayout
            android:id="@+id/Linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:background="@color/colorPrimaryDark">

            <ScrollView
                android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:id="@+id/logotipo"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/logobranca"
                        android:layout_marginRight="30dp"
                        android:layout_marginLeft="30dp" />

                        <EditText
                            android:id="@+id/identificadorEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:layout_marginTop="15dp"
                            android:imeActionId="@+id/login"
                            android:imeOptions="actionNext|actionUnspecified"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:padding="15dp"
                            android:singleLine="true"
                            android:textColor="@color/gelo"
                            android:autoText="true"
                            android:textColorHint="@color/gelo"
                            android:background="@drawable/edit_text_white_top" />

                        <EditText
                            android:id="@+id/passwordEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:imeActionId="@+id/login"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:layout_marginTop="5dp"
                            android:singleLine="true"
                            android:padding="15dp"
                            android:textColorHint="@color/gelo"
                            android:background="@drawable/edit_text_white_bottom"
                            android:textColor="@color/gelo" />

                    <Button
                        style="@style/buttomLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:onClick="login"
                        android:text="@string/login"
                        android:textStyle="bold"
                        android:translationZ="3dp" />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="18dp"
                        android:layout_marginTop="18dp"
                        android:gravity="center">
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="3dp"
                            android:background="@color/gelo"
                            android:layout_weight="1">
                        </View>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/or"
                            android:id="@+id/textView3"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center_horizontal"
                            android:textColor="@color/gelo"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"/>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="3dp"
                            android:background="@color/gelo"
                            android:layout_weight="1">
                        </View>
                    </LinearLayout>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/buttomLogin"
                        android:id="@+id/button"
                        android:layout_marginTop="6dp"
                        android:onClick="redirecionar"
                        android:text="@string/naoemembro"
                        android:typeface="normal"
                        android:textStyle="bold"
                        android:layout_gravity="center"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="30dp">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:onClick="autenticar"
                            android:textColor="@color/gelo"
                            android:textSize="15sp"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:text="@string/validarcodigo"
                            android:typeface="normal"
                            android:layout_gravity="center"
                            android:layout_marginBottom="6dp" />

                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

    </LinearLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/layout_carregando" />

</FrameLayout>